# reading-stats

./: .gitignore  Makefile  README.md  TODO.md  config.toml  pyproject.toml  requirements.txt  setup.py
config/: config.toml
data/backup/: books_old.csv  books_old.db
data/processed/: read_history.csv
data/raw/: books.db  books.sqbpro
data/results/: genres_stats.csv  recent_reads.csv  top_authors.csv  top_works.csv
data/tables/: h_p_lovecraft.md  next_reads.md  stephen_king.md
reading_stats/: colors.py  config.py  settings.py
reading_stats/charts/: bar.py  scatter.py  table.py
reading_stats/cli/: main.py
reading_stats/db/: connection.py  queries.py
reading_stats/export/: authors.py  export_author_bibliography.py  genres.py  next_reads.py  read_history.py  works.py
reading_stats/models/: author.py  read.py  work.py
reading_stats/reports/: author_bibliography.py  authors_scatter.py  genres_scatter.py  next_reads.py  works_scatter.py
reading_stats/services/: authors.py  bibliography.py  genres.py  next_reads.py  works.py
reading_stats/utils/: colors.py  paths.py  styles.py
reports/: author_bibliography.py  authors_scatter.py  genres_scatter.py  works_scatter.py
sql/: author_bibliography.sql  read_history.sql  stephen_king.sql  to_read_next.sql  v_currently_reading.sql  v_read_history.sql  v_to_read_next.sql  v_works_with_authors.sql
src/: authors.py  colors.py  data_migration.py  queries.py  read_history.py  settings.py  stephen_king.py  to_read_next.py  utils.py  works.py
